--- a/src/pages/innermatchcenter/innermatchcenter.html
+++ b/src/pages/innermatchcenter/innermatchcenter.html
@@ -629,7 +629,7 @@
                   </div>
 
                   <div class="ladderTableLeftSide" *ngIf="obj.type=='away'">
-                    <img src="http://54.244.98.247{{baseUrl}}{{awayTeamImages[0].image_value}}" class="laderTeamIcon" />
+                    <img src="{{path1}}{{baseUrl}}{{awayTeamImages[0].image_value}}" class="laderTeamIcon" />
                     <div class="Player_number">
                       <span>{{obj.player_number}}</span>
                     </div>
