--- a/src/pages/fixture/fixture.html
+++ b/src/pages/fixture/fixture.html
@@ -146,4 +146,8 @@
 	<div *ngIf="weblink" class="weblinkclass">
       <iframe height="100%" width="100%" [src]="safeURL" seamless allowfullscreen></iframe>
   </div>
+  <div class="advContainer1" *ngIf="weblink" style="margin: 0 auto 0 -7px; width: 104%;">
+    <img src="{{path}}{{cutPath(footerAdv[0].ad_image)}}"(click)="goToAddSite(footerAdv[0].ad_url);">
+  </div>
 </ion-content>
+
