--- a/src/pages/fixture/fixture.html
+++ b/src/pages/fixture/fixture.html
@@ -144,10 +144,13 @@
 	</div>
 	<!-- weblink -->
 	<div *ngIf="weblink" class="weblinkclass">
-      <iframe height="100%" width="100%" [src]="safeURL" seamless allowfullscreen></iframe>
-  </div>
-  <div class="advContainer1" *ngIf="weblink" style="margin: 0 auto 0 -7px; width: 104%;">
-    <img src="{{path}}{{cutPath(footerAdv[0].ad_image)}}"(click)="goToAddSite(footerAdv[0].ad_url);">
+      <iframe  [src]="safeURL" seamless allowfullscreen sandbox="allow-forms allow-scripts allow-same-origin allow-popups allow-top-navigation"></iframe>
   </div>
 </ion-content>
-
+<ion-footer *ngIf="weblink" >
+  <ion-toolbar class="jb-toolbar">
+      <div class="jb-adv">
+          <img src="assets/imgs/CSM_-_More_Footy_Less_Admin_(white).gif">
+      </div>
+  </ion-toolbar>
+</ion-footer>
