--- a/src/pages/goalkickers/goalkickers.html
+++ b/src/pages/goalkickers/goalkickers.html
@@ -86,7 +86,8 @@
 <ion-footer *ngIf="weblink" >
   <ion-toolbar class="jb-toolbar">
       <div class="jb-adv">
-          <img src="assets/imgs/CSM_-_More_Footy_Less_Admin_(white).gif" class="full-image">
-      </div>
+        <img *ngIf="WeblinkAd == undefined" class="full-image" src="assets/imgs/CSM_-_More_Footy_Less_Admin_(white).gif">
+        <img *ngIf="WeblinkAd != undefined" [src]="WeblinkAd">
+    </div>
   </ion-toolbar>
 </ion-footer>
