--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -21,21 +21,21 @@
           </div>
         </div>
         <img src="{{value.thumbnail_image}}" class="setImgWidth" *ngIf="value.pm_type==1" />
-        <img src="{{path}}{{value.image}}" class="setImgWidth" *ngIf="value.pm_type==2" />
+        <img src="{{path}}{{cutPath(value.image)}}" class="setImgWidth" *ngIf="value.pm_type==2" />
       </div>
       <div class="sliderCaptionText">{{value.title}}</div>
     </ion-slide>
   </ion-slides>
 
   <div class="custom-SubHeaderBar" *ngIf="headerimage!=''">
-    <img src="{{path}}{{headerimage}}" class="advrImgHeight" (click)="goToAddSite(headerurl);">
+    <img src="{{path}}{{cutPath(headerimage)}}" class="advrImgHeight" (click)="goToAddSite(headerurl);">
   </div>
 
   <ion-list class="jb-list-margin">
     <ion-item class="bgPage-color" *ngFor="let value of newsData.news | slice:4; let i=index" (click)="openpage(value)">
       <ion-thumbnail item-start>
         <img src="{{value.thumbnail_image}}" *ngIf="value.pm_type==1" />
-        <img src="{{path}}{{value.image}}" *ngIf="value.pm_type==2" />
+        <img src="{{path}}{{cutPath(value.image)}}" *ngIf="value.pm_type==2" />
         <div class="inner-custom jb-inner">
           <ion-icon name="appicons-outube" class="jb-icon-inner-red" *ngIf="value.pm_type==1"></ion-icon>
         </div>
@@ -45,4 +45,10 @@
       <!-- <button ion-button clear item-end>View</button> -->
     </ion-item>
   </ion-list>
+  <ion-infinite-scroll (ionInfinite)="doInfinite($event)" >
+      <ion-infinite-scroll-content
+      loadingSpinner="bubbles"
+      loadingText="Loading more news...">
+    </ion-infinite-scroll-content>
+  </ion-infinite-scroll>
 </ion-content>
