--- a/src/pages/ladder/ladder.html
+++ b/src/pages/ladder/ladder.html
@@ -101,8 +101,8 @@
     </table>
 </div>
     <!-- <div id="placeholder" style="width:600px;height:300px"></div>  -->
-    <div *ngIf="weblink" class="weblinkclass">
-            <iframe height="100%" width="100%" [src]="safeURL" seamless allowfullscreen></iframe>
+    <div *ngIf="weblink" class="weblinkclass" [innerHTML] = "safeURL">
+            <!-- <iframe height="100%" width="100%" [src]="safeURL" seamless allowfullscreen></iframe> -->
         </div>
 </ion-content>
 <ion-footer>
