--- a/src/pages/matchreport/matchreport.html
+++ b/src/pages/matchreport/matchreport.html
@@ -25,21 +25,21 @@
 					</div>
 				</div>
 				<img src="{{value.thumbnail_image}}" class="setImgWidth" *ngIf="value.pm_type==1" />
-				<img src="{{path}}{{value.pm_cover_image}}" class="setImgWidth" *ngIf="value.pm_type==2" />
+				<img src="{{path}}{{cutPath(value.pm_cover_image)}}" class="setImgWidth" *ngIf="value.pm_type==2" />
 			</div>
 			<div class="sliderCaptionText">{{value.pm_title}}</div>
 		</ion-slide>
 	</ion-slides>
 
 	<div class="custom-SubHeaderBar" *ngIf="headerimage!=''">
-		<img src="{{path}}{{headerimage}}" class="advrImgHeight" (click)="goToAddSite(headerurl);">
+		<img src="{{path}}{{cutPath(headerimage)}}" class="advrImgHeight" (click)="goToAddSite(headerurl);">
 	</div>
 
 	<ion-list class="jb-list-margin">
 		<ion-item class="bgPage-color" *ngFor="let value of MatchreportData.match_report | slice:4; let i=index" (click)="goToMatchReportDetail(value.pm_id)">
 			<ion-thumbnail item-start>
 				<img src="{{value.thumbnail_image}}" *ngIf="value.pm_type==1" />
-				<img src="{{path}}{{value.pm_cover_image}}" *ngIf="value.pm_type==2" />
+				<img src="{{path}}{{cutPath(value.pm_cover_image)}}" *ngIf="value.pm_type==2" />
 			</ion-thumbnail>
 			<h2 class="jb-margin-bottom">{{value.pm_title}}</h2>
 			<p class="jb-cut-stle">{{value.pm_date}}</p>
