--- a/src/pages/news-details/news-details.html
+++ b/src/pages/news-details/news-details.html
@@ -12,7 +12,7 @@
 
 <ion-content class="bgPage-color" no-bounce>
   <div>
-    <img src="{{path}}{{newsdetails.image}}" class="setImgWidth" *ngIf="newsdetails.pm_type==2" style="box-shadow: 5px 0 9px black;"
+    <img src="{{path1}}{{cutPath(newsdetails.image)}}" class="setImgWidth" *ngIf="newsdetails.pm_type==2" style="box-shadow: 5px 0 9px black;"
     />
     <img src="{{newsdetails.thumbnail_image}}" class="setImgWidth" *ngIf="newsdetails.pm_type==1" (click)="youtubepage(newsdetails);"
       style="box-shadow: 5px 0 9px black;" />
