--- a/src/pages/matchcenter/matchcenter.html
+++ b/src/pages/matchcenter/matchcenter.html
@@ -129,8 +129,8 @@
 
     </div>
   </div>
-  <div *ngIf="weblink" class="weblinkclass">
-      <iframe [src]="safeURL" seamless allowfullscreen sandbox="allow-forms allow-scripts allow-same-origin allow-popups allow-top-navigation"></iframe>
+  <div *ngIf="weblink" class="weblinkclass" [innerHTML]="safeURL">
+      <!-- <iframe [src]="safeURL" seamless allowfullscreen height="100%" width="100%"></iframe> -->
   </div>
 </ion-content>
 <ion-footer *ngIf="weblink" >
